--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,8 +67,8 @@
         </ul>
       </div>
       <section>
-        <article>
-            <div class="popular-video">
+        <article class="popular">
+            <div class="popular-vid">
               <iframe src="<%=likedVideo.url%>" class="main-vid"></iframe>
               <div class="info-div">
                 <span><%=likedVideo.title%></span>
@@ -85,15 +85,14 @@
                 <%}%>
               </div>
             </div>
-          </div>
-          <div class="popular-user">
-          <h1><%=user.name%></h1>
-          <ul>
-            <%for(let i = 0; i < user.videos.length; i ++) {%>
-                <li><a href="/video/<%=user.videos[i]._id%>"><%=user.videos[i].title%></a></li>
-            <%}%>
-          </ul>
-          </div>
+            <div class="popular-user">
+              <h1><%=user.name%></h1>
+              <ul>
+                <%for(let i = 0; i < user.videos.length; i ++) {%>
+                  <li><a href="/video/<%=user.videos[i]._id%>"><%=user.videos[i].title%></a></li>
+              <%}%>
+              </ul>
+            </div>
         </article>
         <article class="scroll">
           <div class="scrollmenu">
@@ -101,7 +100,7 @@
               <div class="vid-container">
                 <div class="vid-player"><iframe src="<%=videos[i].url%>" class="side-vid"></iframe></div>
                 <div class="title-div">
-                    <h2><a href="/video/<%=videos[i]._id%>" class="title"><%= videos[i].title %></a></h2>
+                    <button><a href="/video/<%=videos[i]._id%>" class="title"><%= videos[i].title %></a></button>
                     <h2 class ="user-name"><%=videos[i].user%></h2>
                 </div>
               </div>
