--- a/views/videos/show.ejs
+++ b/views/videos/show.ejs
@@ -10,8 +10,8 @@
   <body>
     <header>
       <div class="home-btn-div">
-        <button class="home-btn"><a href="/"<i class="fas fa-home icon-btn"></a></i></button>
-        <button class="ham-btn"><i class="fas fa-bars icon-btn"></i></button>
+          <button class="home-btn"><a href="/"><i class="fas fa-home home-icon"></a></i></button>
+          <button class="ham-btn"><i class="fas fa-bars ham-icon"></i></button>
       </div>
       <nav>
       <%if(logged) {%>
