made sure to add vid

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,7 @@
       <section>
         <article>
             <div class="popular-video">
-              <iframe src="<%=likedVideo.url%>" class="main-vid"></iframe>
+              <!--iframe src="<%=likedVideo.url%>" class="main-vid"></iframe>
               <div class="info-div">
                 <span><%=likedVideo.title%></span>
                 <%if(!logged) {%>
@@ -86,7 +86,7 @@
                 <%}%>
               </div>
             </div>
-          </div>
+          </div-->
           <div class="popular-user">
           <h1><%=user.name%></h1>
           <ul>
