--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,6 +190,10 @@ footer {
     margin: 5px;
 }
 
+.socialmedia i:hover {
+    transform: scale(1.5);
+}
+
 /*  Button Input  */
 
 .btn {
@@ -391,7 +395,7 @@ textarea {
     width: 100%;
     border: 0;
     border-bottom: 2px solid #2196F3;
-    font-size: 20px;
+    font-size: 1em;
 }
 
 .comment-btn-div {
@@ -406,6 +410,7 @@ textarea {
 }
 
 @media screen and (max-width: 900px) {
+    
     body {
         margin: 0px;
     }
@@ -472,7 +477,7 @@ textarea {
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
 
     header {
         height: 82px;
@@ -504,13 +509,6 @@ textarea {
 
     .side-vid {
         width: 100%;
-    }
-}
-
-@media screen and (max-width: 600px) {
-
-    .side-vid {
-        width: 220px;
     }
 }
 
