--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                       <input type="password" name="password" placeholder="password">
                       <button class="log-in-modal btn">Log In</button>
                   </form>
-                  <button class="sign-up-btn btn">sign up</button>
+                  <button class="sign-up-btn btn">Sign up</button>
               <div class="modal modal-signup">
                 <div class="modal-content">
                   <div class="modal-header">
