--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,8 +145,9 @@ section article {
 
 .filter-div {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     margin: 9px 0px;
+    align-items: center;
 }
 
 .filter-div input {
@@ -154,6 +155,34 @@ section article {
     font-size: 1em;
     box-shadow: 0px 0px 10px #03A9F4;
 }
+
+.autocomplete {
+    background: white;
+    text-align: center;
+    border-radius: 10px;
+    position: absolute;
+    top: 21%;
+    color: white;
+    width: 81%;
+}
+
+.autocomplete li {
+    color: #03A9F4;
+    height: 27px;
+    font-size: 1.5em;
+    letter-spacing: 2px;
+    padding: 5px;
+}
+
+.autocomplete li:hover {
+    color: white;
+    background: #03A9F4;
+    opacity: .8;
+}
+
+
+
+
 
 .title-div {
     letter-spacing: 3px;
@@ -480,6 +509,11 @@ textarea {
         position: relative;
         top: 0px;
     }
+
+    .autocomplete {
+        position: absolute;
+        top: 19%;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -517,11 +551,8 @@ textarea {
     }
 }
 
-<<<<<<< HEAD
-=======
 
 
->>>>>>> 538500b7ae1c7895239c52e207a3352c26a93ada
 /*  KEY FRAMES  */
 
 @keyframes modalOpen {
