--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,11 +43,11 @@
                     <h1>Sign Up</h1>
                   </div>
                   <div class="modal-body">
-                    <form action="/user/signup" method="POST" class="form">
-                      <input type="text" name="name" placeholder="name">
-                      <input type="email" name="email" placeholder="email">
-                      <input class="password" type="password" name="password" placeholder="password">
-                      <input class="passwordcheck" type="password" name="passwordcheck" placeholder="password check">
+                    <form action="/user/signup" method="POST" class="form" >
+                      <input type="text" name="name" placeholder="name" required="required">
+                      <input type="email" name="email" placeholder="email" required="required">
+                      <input class="password" type="password" name="password" placeholder="password" required="required">
+                      <input class="passwordcheck" type="password" name="passwordcheck" placeholder="password check" required="required">
                       <h3 class="mismatch"></h3>
                       <button class="sign-up-modal-btn">Sign Up</button>
                     </form>
