--- a/views/videos/show.ejs
+++ b/views/videos/show.ejs
@@ -109,7 +109,7 @@
             <div class="vid-container">
               <div class="vid-player"><iframe src="<%=videos[i].url%>" class="side-vid"></iframe></div>
               <div class="title-div">
-                <h2><a href="/video/<%=videos[i]._id%>" class="title"><%= videos[i].title %></a></h2>
+                   <a href="/video/<%=videos[i]._id%>" class="title"><button><%= videos[i].title %></button></a>
                 <h2><%=videos[i].user%></h2>
               </div>
             </div>
