--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
                       <input class="password" type="password" name="password" placeholder="password">
                       <input class="passwordcheck" type="password" name="passwordcheck" placeholder="password check">
                       <h3 class="mismatch"></h3>
-                      <button class="sign-up-modal-btn">Sign Up</button>
+                      <button class="sign-up-modal-btn btn">Sign Up</button>
                     </form>
                   </div>
                 </div>
